--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -6,19 +6,18 @@ on:
   push:
     branches:
       - master
-
 jobs:
-   my_testing:
-      runs-on: ubuntu-latest 
+  my_testing:
+    runs-on: ubuntu-latest 
 
-      steps:
-      - name: Print Hello Message  
-      - run : echo "Hello World! from testing job" 
+    steps:
+    - name: Print Hello Message  
+    - run : echo "Hello World! from testing job" 
 
    
-   my_deploy:
-     runs-on: ubuntu-latest
+  my_deploy:
+    runs-on: ubuntu-latest
      
-     steps:
-     - name: Print Hello Message  
-     - run : echo "Hello World! from Deploy job"
+    steps:
+    - name: Print Hello Message  
+      run : echo "Hello World! from Deploy job"
