--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -8,11 +8,11 @@ on:
       - master
 jobs:
   my_testing:
-    runs-on: ubuntu-latest 
+     runs-on: ubuntu-latest 
 
-    steps:
-    - name: Print Hello Message  
-    - run : echo "Hello World! from testing job" 
+     steps:
+     - name: Print Hello Message  
+       run : echo "Hello World! from testing job" 
 
    
   my_deploy:
