--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -11,13 +11,14 @@ jobs:
      runs-on: ubuntu-latest 
 
      steps:
-     - name: Print Hello Message  
+     - name: Print Hello Message in testing 
        run : echo "Hello World! from testing job" 
 
    
   my_deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  
+    needs: [my_testing]
      
     steps:
-    - name: Print Hello Message  
+    - name: Print Hello Message in Deploy  
       run : echo "Hello World! from Deploy job"
