--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -1,6 +1,9 @@
 # This id comment
 
 name: MyGitHubAction
+env:
+  APPLICATION_NAME     : "My flask"
+  DEPLOY_PACKAGE_NAME  : "flask-deploy-ver-${{ github.sha }}"
 
 on:
   push:
@@ -13,6 +16,11 @@ jobs:
      steps:
      - name: Print Hello Message in testing 
        run : echo "Hello World! from testing job" 
+     - name: Execure few commands
+       run : |
+         echo "Hello Message1"
+         echo "Hello Message2"
+         echo "Application name: ${{ env. APPLICATION_NAME }}" 
 
    
   my_deploy:
@@ -22,3 +30,5 @@ jobs:
     steps:
     - name: Print Hello Message in Deploy  
       run : echo "Hello World! from Deploy job"
+    - name: Printing Deploy package
+      run: echo "Deploy package name is ${{ env.DEPLOY_PACKAGE_NAME}}"
