--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -24,7 +24,12 @@ jobs:
          
      - name: List current folder
        run : ls -la
-
+       
+     - name: Git  clone my repo
+       uses: action/checkout@v1
+       
+     - name: List current folder
+       run : ls -la
    
   my_deploy:
     runs-on: ubuntu-latest  
@@ -35,3 +40,9 @@ jobs:
       run : echo "Hello World! from Deploy job"
     - name: Printing Deploy package
       run: echo "Deploy package name is ${{ env.DEPLOY_PACKAGE_NAME}}"
+      
+    - name: Lets test some packeges if they are here 1
+      run : aws --version
+      
+    - name: Lets test some packeges if the are here 2
+      run : zip  
