--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -34,10 +34,20 @@ jobs:
   my_deploy:
     runs-on: ubuntu-latest  
     needs: [my_testing]
+    env:
+      VAR1 : "This is job Level Variable1"
+      VAR2 : "This is  job level Variable2"
      
     steps:
     - name: Print Hello Message in Deploy  
       run : echo "Hello World! from Deploy job"
+    - name:  Print env vars
+      run : |
+        echo "Var1 = ${{ env.VAR1}}"
+        echo "Var2 = ${{ env.VAR2}}"
+        echo "Var3 = $LOCAL_VAR"
+      env:
+       LOCAL_VAR: "This is super local Environment variable"
     - name: Printing Deploy package
       run: echo "Deploy package name is ${{ env.DEPLOY_PACKAGE_NAME}}"
       
@@ -45,4 +55,4 @@ jobs:
       run : aws --version
       
     - name: Lets test some packeges if the are here 2
-      run : zip  
+      run : zip --version 
